reordered token rule tests