@@ -32,74 +32,19 @@ import java.util.Objects;
 
 import static org.junit.jupiter.api.Assertions.*;
 
+/**
+ * Test class for {@link NegatableTokenRule}.<br>
+ *
+ * @author Luis-St
+ */
 class NegatableTokenRuleTest {
 	
 	private static @NotNull Token createToken(@NotNull String value) {
 		return SimpleToken.createUnpositioned(value);
 	}
 	
-	private static @NotNull TokenRule createRule(@NotNull String value) {
-		return new TokenRule() {
-			@Override
-			public @Nullable TokenRuleMatch match(@NotNull TokenStream stream, @NotNull TokenRuleContext ctx) {
-				Objects.requireNonNull(stream, "Token stream must not be null");
-				Objects.requireNonNull(ctx, "Token rule context must not be null");
-				if (!stream.hasMoreTokens()) {
-					return null;
-				}
-				
-				int startIndex = stream.getCurrentIndex();
-				Token token = stream.getCurrentToken();
-				if (token.value().equals(value)) {
-					return new TokenRuleMatch(startIndex, stream.advance(), List.of(token), this);
-				}
-				return null;
-			}
-		};
-	}
-	
-	private static NegatableTokenRule createNegatableRule(@NotNull String expectedValue) {
+	private static @NotNull NegatableTokenRule createNegatableRule(@NotNull String expectedValue) {
 		return token -> token.value().equals(expectedValue);
-	}
-	
-	@Test
-	void matchWithTokenStreamAndContextMatching() {
-		NegatableTokenRule rule = createNegatableRule("test");
-		TokenStream stream = TokenStream.createMutable(List.of(createToken("test")));
-		TokenRuleContext context = TokenRuleContext.empty();
-		
-		TokenRuleMatch result = rule.match(stream, context);
-		
-		assertNotNull(result);
-		assertEquals(0, result.startIndex());
-		assertEquals(1, result.endIndex());
-		assertEquals(1, result.matchedTokens().size());
-		assertEquals("test", result.matchedTokens().get(0).value());
-		assertEquals(rule, result.matchingTokenRule());
-		assertEquals(1, stream.getCurrentIndex()); // Stream advanced
-	}
-	
-	@Test
-	void matchWithTokenStreamAndContextNotMatching() {
-		NegatableTokenRule rule = createNegatableRule("expected");
-		TokenStream stream = TokenStream.createMutable(List.of(createToken("actual")));
-		TokenRuleContext context = TokenRuleContext.empty();
-		
-		TokenRuleMatch result = rule.match(stream, context);
-		
-		assertNull(result);
-		assertEquals(0, stream.getCurrentIndex()); // Stream not advanced
-	}
-	
-	@Test
-	void matchWithEmptyStream() {
-		NegatableTokenRule rule = createNegatableRule("test");
-		TokenStream stream = TokenStream.createMutable(List.of());
-		TokenRuleContext context = TokenRuleContext.empty();
-		
-		TokenRuleMatch result = rule.match(stream, context);
-		
-		assertNull(result);
 	}
 	
 	@Test
@@ -116,6 +61,53 @@ class NegatableTokenRuleTest {
 		TokenStream stream = TokenStream.createMutable(List.of(createToken("test")));
 		
 		assertThrows(NullPointerException.class, () -> rule.match(stream, null));
+	}
+	
+	@Test
+	void matchWithEmptyStream() {
+		NegatableTokenRule rule = createNegatableRule("test");
+		TokenStream stream = TokenStream.createMutable(List.of());
+		TokenRuleContext context = TokenRuleContext.empty();
+		
+		TokenRuleMatch result = rule.match(stream, context);
+		
+		assertNull(result);
+	}
+	
+	@Test
+	void matchWithTokenStreamAndContextMatching() {
+		NegatableTokenRule rule = createNegatableRule("test");
+		TokenStream stream = TokenStream.createMutable(List.of(createToken("test")));
+		TokenRuleContext context = TokenRuleContext.empty();
+		
+		TokenRuleMatch result = rule.match(stream, context);
+		
+		assertNotNull(result);
+		assertEquals(0, result.startIndex());
+		assertEquals(1, result.endIndex());
+		assertEquals(1, result.matchedTokens().size());
+		assertEquals("test", result.matchedTokens().getFirst().value());
+		assertEquals(rule, result.matchingTokenRule());
+		assertEquals(1, stream.getCurrentIndex());
+	}
+	
+	@Test
+	void matchWithTokenStreamAndContextNotMatching() {
+		NegatableTokenRule rule = createNegatableRule("expected");
+		TokenStream stream = TokenStream.createMutable(List.of(createToken("actual")));
+		TokenRuleContext context = TokenRuleContext.empty();
+		
+		TokenRuleMatch result = rule.match(stream, context);
+		
+		assertNull(result);
+		assertEquals(0, stream.getCurrentIndex());
+	}
+	
+	@Test
+	void matchDirectWithNullToken() {
+		NegatableTokenRule rule = createNegatableRule("test");
+		
+		assertThrows(NullPointerException.class, () -> rule.match(null));
 	}
 	
 	@Test
@@ -139,10 +131,16 @@ class NegatableTokenRuleTest {
 	}
 	
 	@Test
-	void matchDirectWithNullToken() {
+	void notWithEmptyStream() {
 		NegatableTokenRule rule = createNegatableRule("test");
+		TokenRule negated = rule.not();
 		
-		assertThrows(NullPointerException.class, () -> rule.match(null));
+		TokenStream stream = TokenStream.createMutable(List.of());
+		TokenRuleContext context = TokenRuleContext.empty();
+		
+		TokenRuleMatch result = negated.match(stream, context);
+		
+		assertNull(result);
 	}
 	
 	@Test
@@ -164,14 +162,10 @@ class NegatableTokenRuleTest {
 		TokenStream stream2 = TokenStream.createMutable(List.of(createToken("other")));
 		TokenRuleContext context = TokenRuleContext.empty();
 		
-		// Original rule matches "test"
 		assertNotNull(rule.match(stream1, context));
-		// Negated rule doesn't match "test"
 		assertNull(negated.match(stream1.copyFromZero(), context));
 		
-		// Original rule doesn't match "other"
 		assertNull(rule.match(stream2, context));
-		// Negated rule matches "other"
 		assertNotNull(negated.match(stream2.copyFromZero(), context));
 	}
 	
@@ -182,19 +176,6 @@ class NegatableTokenRuleTest {
 		TokenRule doubleNegated = rule.not().not();
 		
 		assertEquals(rule, doubleNegated);
-	}
-	
-	@Test
-	void notWithEmptyStream() {
-		NegatableTokenRule rule = createNegatableRule("test");
-		TokenRule negated = rule.not();
-		
-		TokenStream stream = TokenStream.createMutable(List.of());
-		TokenRuleContext context = TokenRuleContext.empty();
-		
-		TokenRuleMatch result = negated.match(stream, context);
-		
-		assertNull(result); // Can't match on empty stream
 	}
 	
 	@Test
@@ -210,13 +191,12 @@ class NegatableTokenRuleTest {
 		assertNotNull(result);
 		assertEquals(0, result.startIndex());
 		assertEquals(1, result.endIndex());
-		assertEquals("test", result.matchedTokens().get(0).value());
-		assertEquals(1, stream.getCurrentIndex()); // Stream advanced
+		assertEquals("test", result.matchedTokens().getFirst().value());
+		assertEquals(1, stream.getCurrentIndex());
 	}
 	
 	@Test
 	void functionalInterfaceUsage() {
-		// Test that we can use lambda expressions
 		NegatableTokenRule lengthRule = token -> token.value().length() > 3;
 		
 		assertTrue(lengthRule.match(createToken("hello")));
@@ -225,35 +205,31 @@ class NegatableTokenRuleTest {
 	
 	@Test
 	void functionalInterfaceWithComplexLogic() {
-		// Test more complex matching logic
 		NegatableTokenRule complexRule = token -> {
 			String value = token.value();
 			return value.startsWith("prefix_") && value.endsWith("_suffix") && value.length() > 10;
 		};
 		
 		assertTrue(complexRule.match(createToken("prefix_middle_suffix")));
-		assertFalse(complexRule.match(createToken("prefix_suffix")));
+		assertTrue(complexRule.match(createToken("prefix_suffix")));
 		assertFalse(complexRule.match(createToken("middle_suffix")));
 		assertFalse(complexRule.match(createToken("prefix_middle")));
 	}
 	
 	@Test
 	void functionalInterfaceWithMethodReference() {
-		// Test using method references
-		NegatableTokenRule methodRefRule = this::isNumeric;
+		NegatableTokenRule methodRefRule = token -> {
+			try {
+				Integer.parseInt(token.value());
+				return true;
+			} catch (NumberFormatException e) {
+				return false;
+			}
+		};
 		
 		assertTrue(methodRefRule.match(createToken("123")));
 		assertTrue(methodRefRule.match(createToken("0")));
 		assertFalse(methodRefRule.match(createToken("abc")));
 		assertFalse(methodRefRule.match(createToken("12a")));
-	}
-	
-	private boolean isNumeric(@NotNull Token token) {
-		try {
-			Integer.parseInt(token.value());
-			return true;
-		} catch (NumberFormatException e) {
-			return false;
-		}
 	}
 }
